--- a/src/components/MenuSection/OrderSection.module.css
+++ b/src/components/MenuSection/OrderSection.module.css
@@ -20,18 +20,15 @@
     width: 100%;
 }
 .button{
-         background-color: #4D1601;
+         background-color: var(--accent-teal);
     border: none;
-    color: white;
-    /* padding: 0px 10px; */
+    color: #89e4e4;
+    padding: 6px 10px;
     text-align: center;
-    /* display: flex; */
-    font-size: 16px;
+    font-size: 18px;
+    font-weight: 600;
     border-radius: 25px;
-    /* margin: 27px 0px; */
     cursor: pointer;
-    width: 25%;
-    /* justify-content: space-evenly; */
-    /* align-items: center; */
-    height: 29px;
+    width: 20%;
+    height: 30px;
 }
