--- a/src/components/SubHeader/SubHeader.module.css
+++ b/src/components/SubHeader/SubHeader.module.css
@@ -1,31 +1,34 @@
-.sub-header{
-    
-    display: flex;
-    margin: 50px auto 0px;
-    flex-wrap: wrap;
-    justify-content: center;
-    background-color: whitesmoke;
-    margin-top: 100px;
-    max-width: 600px;
-    height: fit-content;
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    padding: 10px;
-    text-align: center;
+.sub-header {
+
+  display: flex;
+  margin: 40px auto 0px;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: whitesmoke;
+  margin-top: 100px;
+  max-width: 600px;
+  height: fit-content;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  padding: 10px;
+  font-weight: 600;
+  line-height: 40px;
+  text-align: center;
 }
 
-.sub-header-img{
-    width: 103%;
-    transform: rotate(-5deg);
-    margin-top: -19px;
-    margin-left: -18px;
-    -webkit-transform: rotate(-5deg);
-    -moz-transform: rotate(-5deg);
-    -ms-transform: rotate(-5deg);
-    -o-transform: rotate(-5deg);
-    z-index: 1;
+.sub-header-img {
+  width: 103%;
+  transform: rotate(-5deg);
+  margin-top: -19px;
+  margin-left: -18px;
+  -webkit-transform: rotate(-5deg);
+  -moz-transform: rotate(-5deg);
+  -ms-transform: rotate(-5deg);
+  -o-transform: rotate(-5deg);
+  z-index: 1;
 }
+
 .main-image {
   width: 100%;
   height: 25rem;
@@ -36,6 +39,8 @@
 .main-image img {
   width: 110%;
   height: 100%;
+  z-index: 1123400;
+  margin-top: 40px;
   object-fit: cover;
-  transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
+  transform: translateY(-2rem) translateX(-3rem);
 }
